# microcraft-apps

./: app.json
examples/: app.json
sample/wasm-example/: app.json
sample/wasm-example/actions/: helloworld.js
sample/wasm-example/lib/: helloworld_wasm.wasm
sample_dir/examples/quantum-algorithms/: app.json
sample_dir/examples/quantum-algorithms/lamport-signature/: app.json
sample_dir/examples/quantum-algorithms/lamport-signature/lib/: Cargo.toml
sample_dir/examples/quantum-algorithms/lamport-signature/lib/src/: lib.rs
sample_dir/examples/wasm/wasm-example/: app.json
