[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.134"
sha2 = "0.10.8"
wasm-bindgen = "0.2.99"
